synaptic (0.75.5~exp3) UNRELEASEDexperimental; urgency=low

  * move to dh8
  * modernize packaging
  * debian/patches/11_use-pkexec.dpatch:
    - merged to have pkexec as a additional auth mechanism, thanks
      to Marc Deslaurier (closes: #648311)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 31 Jan 2012 09:55:23 +0100

synaptic (0.75.5~exp2) experimental; urgency=low

  * merge changes from Ubuntu:
    - debian/changelog: updated
    - debian/control: add or-dependency policykit-1 for pkexec support
    - debian/rules: install apport hook and pkgexec wrapper
    - pre-build.sh: run autoreconf after updating the configure.in versions
  * debian/control:
    - fix Vcs-Bzr
  * debian/rules:
    - do not build --with-launchpad-integration anymore

 -- Michael Vogt <mvo@debian.org>  Mon, 30 Jan 2012 12:32:01 +0100

synaptic (0.75.5~exp1) experimental; urgency=low

  * merged from lp:synaptic
  * build against libapt in experimental

 -- Michael Vogt <mvo@debian.org>  Tue, 24 Jan 2012 14:37:30 +0100

synaptic (0.75.4) unstable; urgency=low

  * gtk/gtkpkglist.cc:
    - fix potential crash when gtk_pkg_list_iter_children is called
      on a empty list
  * debian/synaptic.postrm:
    - remove /etc/apt/apt.conf.d/99synaptic on purge (closes: #64550)
  * gtk/rgmainwindow.cc, gtk/gsynaptic.cc:
    - cleanup 
  * fix build with apt in experimental
  * po/*:
    - auto updates from LP

 -- Michael Vogt <mvo@debian.org>  Tue, 20 Dec 2011 22:32:21 +0100

synaptic (0.75.3) unstable; urgency=low

  * gtk/rgfetchprogress.cc:
    - fix potential crash due to division through zero
  * po/et.po:
    - updated, thanks to Guido Tabbernuk
  * po/*:
    - auto updates from LP

 -- Michael Vogt <mvo@debian.org>  Mon, 19 Sep 2011 10:45:38 +0200

synaptic (0.75.2ubuntu9) precise; urgency=low

  * No-change rebuild to drop spurious libsfgcc1 dependency on armhf.

 -- Adam Conrad <adconrad@0c3.net>  Fri, 02 Dec 2011 21:25:58 -0700

synaptic (0.75.2ubuntu8) oneiric; urgency=low
