@@ -5,6 +5,10 @@ synaptic (0.75.5~exp3) UNRELEASEDexperimental; urgency=low
   * debian/patches/11_use-pkexec.dpatch:
     - merged to have pkexec as a additional auth mechanism, thanks
       to Marc Deslaurier (closes: #648311)
+  * common/rpackagelister.{cc,h}:
+    - add new "Synaptic::ShowAllMultiArch" config option that control
+      if all multiarch packages are displayed or only those that are
+      not available for the native arch
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 31 Jan 2012 09:55:23 +0100
 
